k8s/envoy/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: LoadBalancer
  selector:
    app: envoy
  ports:
  - name:
    protocol: TCP
    port: 443
    targetPort: 8443
    # targetPort: 8090
